--- a/src/index.css
+++ b/src/index.css
@@ -164,7 +164,11 @@
       transform: rotate(1turn);
     }
   }
+/* links scroller */
 
+/* * {
+    outline: 1px solid red;
+} */
 
 .media-scroller {
     --_spacer: var(--size-3);
@@ -172,6 +176,8 @@
     gap: var(--_spacer);
     grid-auto-flow: column;
     grid-auto-columns: 27%;
+    /* grid-auto-columns: minmax(200px, 1fr); */
+
    
     padding: 0 var(--_spacer) var(--_spacer);
 
@@ -181,7 +187,9 @@
 }
 
 .links-element{
-    display: grid;
+    /* display: grid; */
+    display: flex;
+    flex-direction: column;
     
     grid-template-rows: min-content;
     gap: var(--_spacer);
@@ -197,17 +205,32 @@
     word-wrap: break-word;
 }
 
-@media (min-width: 320px) {
-    .media-scroller {
-        grid-template-columns: 1fr;
-    }
-}
+
 
 .links-img {
     inline-size: 100%;
     aspect-ratio: 16/9;
     object-fit: contain;
 }
+
+@media (max-width: 320px) {
+    .links-title {
+       order: 1;
+    }
+   
+    .links-img {
+       order: 2;
+    }
+
+    .links-element {
+        background: var(--surface-1);
+        padding: 1px;
+        border-radius:var(--radius-2);
+        box-shadow: var(--shadow-3);
+
+    }
+   }
+   
 
 .snaps-inline {
     scroll-snap-type: inline mandatory;
